--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "name": "url-shortener-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Aryaman3007.github.io/url-shortening-service",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +44,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5191"
+  "proxy": "http://localhost:5191",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
